# nmosh

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  wresources.rc
src/: app.rs  main.rs  midi.rs  ndi.rs  renderer.rs  ui.rs
src/shaders/: effects.wgsl
