[package]
name = "nmosh"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = { version = "1.15", features = ["derive"] }
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
env_logger = "0.11"
libloading = "0.8"
log = "0.4"
midir = "0.10"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "0.19"
winit = "0.29"

[build-dependencies]
embed-resource = "2.4"

